git commit -m "Ajuste HTML"

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#"><li>Controle de Versão</li></a>
             <a href="#"><li>Git</li></a>
             <a href="#"><li>GitHub</li></a>
+            <a href="#"><li>GitLab</li></a>
             <ul class="categoria">
                 <a href="#"><li>Criar conta no GitHub</li></a>
             </ul>
