git commit -m "Ajustes de dimensão de tela"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#"><li>Branches</li></a>
             </ul>
             <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li>Exemplo de Colaboração com Git</li></a>
+            <a href="#"><li class="final">Exemplo de Colaboração com Git</li></a>
         </ul>
     </nav>
     <main>
