git commit -m "Primeira colocação dos textos produzidos"

--- a/index.html
+++ b/index.html
@@ -47,77 +47,31 @@
     </nav>
     <main>
         <article>
-            <h1>Título</h1>
+            <h1>Controle de Versão</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
+                Como o próprio nome se define, tem ênfase em gerenciar 
+                diferentes versões de um mesmo projeto, onde é permitido visualizar o histórico das modificações, 
+                trabalho cooperativo entre programadores e possibilitar comparações entre as versões desenvolvidas
+                com equipe de desenvolvimento.
             </p>
-            <br>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
+                São 3 características que possui:
             </p>
-            <br>
+            <h2>Registro de Alterações</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
+                Quaisquer sejam as modificações feitas nas entrelinhas dos arquivos do projeto, serão salvas o histórico dessas
+                modificações, ajudando na visualização das mudanças realizadas entre versões e nas futuras correções de software.
             </p>
-            <br>
+            <h2>Desenvolvimento de Versões Diferentes</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
+                Com um sistema que possui ramificações (Branches) de projeto, a equipe pode trabalhar simultaneamente de forma eficaz em
+                fluxos diferentes sem afetar o código-fonte matriz, contando com a verificação de Branches com 
+                alterações em conflito e mesclagem de projeto.
             </p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
-            </p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis sem, suscipit quis diam sed, cursus imperdiet nulla. 
-                Ut ullamcorper tortor at ipsum ornare malesuada. Nulla nibh risus, hendrerit faucibus mauris sed, porttitor consequat orci. 
-                Nulla felis arcu, viverra feugiat lacus quis, sodales finibus neque. 
-                Aenean rhoncus odio at est pellentesque, nec auctor augue posuere. Donec eu tincidunt mauris. 
-                Vivamus rutrum, tellus ac congue iaculis, orci nulla dapibus purus, ut aliquam nisi massa sed eros. 
-                Aliquam a enim mi. Vivamus id condimentum elit. Cras feugiat vehicula libero vel sodales. 
-                Aenean suscipit felis nibh, vestibulum rhoncus nulla ultricies et. Nulla ac eros feugiat, lobortis sem ut, convallis libero. 
-                Proin tempor porttitor dui, sit amet tempor mauris. Donec eu urna tempus, sagittis turpis vel, viverra mi. 
-                Etiam at nunc et lacus dapibus elementum. 
+            <h2>Rastreio de Alterações</h2>
+            <p>Possui a capacidade de rastrear todas as modificações realizadas, conectar com o software de desenvolvimento
+                do projeto e comentários de cada ajuste realizado pelo programador, contudo, facilitando na análise de bugs e
+                no fluxo de desenvolvimentodo projeto.
             </p>
         </article>
     </main>
