git commit -m "Mais atribuições de textos e imagens"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div></div>
             <div></div>
         </div>
-        <img src="images/Git Logo.png" alt="Logotipo do Git">
+        <img src="images/Logo/Git Logo.png" alt="Logotipo do Git">
         <p>Git</p>
     </header>
     <nav class="vertical-nav">
@@ -55,24 +55,35 @@
                 com equipe de desenvolvimento.
             </p>
             <p>
-                São 3 características que possui:
+                Apresenta 3 características:
             </p>
-            <h2>Registro de Alterações</h2>
-            <p>
-                Quaisquer sejam as modificações feitas nas entrelinhas dos arquivos do projeto, serão salvas o histórico dessas
-                modificações, ajudando na visualização das mudanças realizadas entre versões e nas futuras correções de software.
-            </p>
-            <h2>Desenvolvimento de Versões Diferentes</h2>
-            <p>
-                Com um sistema que possui ramificações (Branches) de projeto, a equipe pode trabalhar simultaneamente de forma eficaz em
-                fluxos diferentes sem afetar o código-fonte matriz, contando com a verificação de Branches com 
-                alterações em conflito e mesclagem de projeto.
-            </p>
-            <h2>Rastreio de Alterações</h2>
-            <p>Possui a capacidade de rastrear todas as modificações realizadas, conectar com o software de desenvolvimento
-                do projeto e comentários de cada ajuste realizado pelo programador, contudo, facilitando na análise de bugs e
-                no fluxo de desenvolvimentodo projeto.
-            </p>
+            <ol>
+                <h2><li>Registro de Alterações</li></h2>
+                <p>
+                    Quaisquer sejam as modificações feitas nas entrelinhas dos arquivos do projeto, serão salvas o histórico dessas
+                    modificações, ajudando na visualização das mudanças realizadas entre versões e nas futuras correções de software.
+                </p>
+                <img src="" alt="">
+                <h2><li>Desenvolvimento de Versões Diferentes</li></h2>
+                <p>
+                    Com um sistema que possui ramificações (Branches) de projeto, a equipe pode trabalhar simultaneamente de forma eficaz em
+                    fluxos diferentes sem afetar o código-fonte matriz, contando com a verificação de Branches com 
+                    alterações em conflito e mesclagem de projeto.
+                </p>
+                <h2><li>Rastreio de Alterações</li></h2>
+                <p>
+                    Possui a capacidade de rastrear todas as modificações realizadas, conectar com o software de desenvolvimento
+                    do projeto e comentários de cada ajuste realizado pelo programador, contudo, facilitando na análise de bugs e
+                    no fluxo do projeto.
+                </p>
+                <h2>Como Funciona?</h2>
+                <p>
+                    O projeto fica armazenada no servidor(repositório remoto), onde ficam armazenados os históricos e 
+                    modificações de cada versão. O desenvolvedor pode baixar a última versão e trabalhá-la, e 
+                    posteriormente atualizar a versão contida no servidor.
+                </p>
+                <img src="images/ControleDeVersao/ControleDeVersao - Figura1.png" alt="Imagem ilustrativa do controle de versões dos projetos no servidor">
+            </ol>
         </article>
     </main>
     <footer>
