git commit -m "Ajustes do modo foco em dispositivos móveis"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Git</title>
 </head>
 <body>
+    <div class="focus"></div>
     <header>
         <div class="menu-icon">
             <div></div>
