git commit -m "Atualiazação de conteudo"

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <nav class="vertical-nav">
         <ul class="lista">
-            <a href="#"><li>Controle de Versão</li></a>
-            <a href="#"><li>Git</li></a>
+            <a href="index.html"><li>Controle de Versão</li></a>
+            <a href="pages/git.html"><li>Git</li></a>
             <a href="#"><li>GitHub</li></a>
             <a href="#"><li>GitLab</li></a>
             <ul class="categoria">
@@ -43,7 +43,7 @@
                 <a href="#"><li>Branches</li></a>
             </ul>
             <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li class="final">Exemplo de Colaboração com Git</li></a>
+            <a href="#"><li class="final">Exemplo de Utilização com Git</li></a>
         </ul>
     </nav>
     <main>
