git commit -m "Adicionamento de textos de GitHub"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Git</title>
+    <title>Git – Controle de Versão</title>
 </head>
 <body>
     <div class="focus"></div>
@@ -22,14 +22,13 @@
         <ul class="lista">
             <a href="index.html"><li>Controle de Versão</li></a>
             <a href="pages/git.html"><li>Git</li></a>
-            <a href="#"><li>GitHub</li></a>
-            <a href="#"><li>GitLab</li></a>
+            <a href="pages/github.html"><li>GitHub</li></a>
             <ul class="categoria">
-                <a href="#"><li>Criar conta no GitHub</li></a>
+                <a href="contaGitHub.html"><li>Criar conta no GitHub</li></a>
             </ul>
-            <a href="#"><li>GitLab</li></a>
+            <a href="pages/gitlab.html"><li>GitLab</li></a>
             <ul class="categoria">
-                <a href="#"><li>Criar conta no GitLab</li></a>
+                <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
             <a href="#"><li>Instalação</li></a>
             <ul class="categoria">
