git commit -m "Atualização de conteúdo"

--- a/pages/gitlab.html
+++ b/pages/gitlab.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Git – Sobre GitHub</title>
+    <title>Git – Sobre GitLab</title>
 </head>
 <body>
     <div class="focus"></div>
@@ -47,26 +47,17 @@
     </nav>
     <main>
         <article>
-            <h1>GitHub</h1>
-            <img class="logotipos-explicacao" src="../images/GitHub/GitHubLogo.png" alt="Logotipo do Git">
+            <h1>GitLab</h1>
+            <img class="logotipos-explicacao" src="../images/GitLab/GitLabLogo.png" alt="Logotipo do Git">
             <p>
-                O GitHub é uma plataforma de hospedagem colaborativa de código-fonte com controle de versão usando o Git. 
-                É a maior rede social dedicada para desenvolvedores atualmente, permitindo aos cadastrados na plataforma 
-                contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo e a qualquer momento.
+                O GitLab é um gerenciador de repositório de software baseado em git, com suporte a Wiki, 
+                integração contínua e gerenciamento de tarefas. Similar ao GitHub, porém o GitLab é open-source, 
+                permitindo que os desenvolvedores armazenem e alterem o código em seus próprios servidores, ao invés de 
+                servidores de terceiros.
             </p>
             <p>
-                Desenvolvida por Chris Wanstrath, J. Hyett, Tom Preston-Werner e Scott Chacon, o primeiro
-                <b>commit</b> realizado pela empresa em 2007, em São Francisco.
-            </p>
-            <p>
-                O GitHub é mundialmente usado e chega a ter mais de 36 milhões de usuários ativos mundialmente 
-                contribuindo em projetos comerciais ou pessoais. Atualmente o GitHub abriga mais de 100 milhões de projetos.
-            </p>
-            <h2>A Rede Social dos Desenvolvedores</h2>
-            <p>
-                O Git é a fonte primordial do GitHub, onde os comandos através do Git serão enviados para
-                o repositório do programador cadastrado na plataforma. O Hub significa a socialização com 
-                pessoas que possuem os mesmos interesses de projeto que você.
+                O software foi escrito originalmente por Dmitriy Zaporozhets, com sua primeira versão em 2011 e 
+                e com a ajuda de Sytse Sijbrandij resolveram fundar uma empresa para dar suporte ao projeto. 
             </p>
             <small>Fonte:
                 <ul>
