git commit -m "Atualização de conteúdo das páginas GitLab e GitHub"

--- a/pages/github.html
+++ b/pages/github.html
@@ -30,19 +30,19 @@
             <ul class="categoria">
                 <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
-            <a href="#"><li>Instalação</li></a>
+            <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
-                <a href="#"><li>Instalação no Linux</li></a>
-                <a href="#"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux"><li>Instalação no Linux</li></a>
+                <a href="instalacaoWindows"><li>Instalação no Windows</li></a>
             </ul>
-            <a href="#"><li>Configuração</li></a>
-            <a href="#"><li>Comandos</li></a>
+            <a href="configuracao"><li>Configuração</li></a>
+            <a href="comandos"><li>Comandos</li></a>
             <ul class="categoria">
-                <a href="#"><li>GitPull</li></a>
-                <a href="#"><li>Branches</li></a>
+                <a href="gitpull.html"><li>GitPull</li></a>
+                <a href="branches"><li>Branches</li></a>
             </ul>
-            <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
+            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
         </ul>
     </nav>
     <main>
@@ -57,6 +57,12 @@
             <p>
                 Desenvolvida por Chris Wanstrath, J. Hyett, Tom Preston-Werner e Scott Chacon, o primeiro
                 <b>commit</b> realizado pela empresa em 2007, em São Francisco.
+            </p>
+            <p>
+                A plataforma possibilita a criação de repertórios ilimitados (em vigor desde 2019), ferramentas
+                de revisão de código, suporte a Wiki e rastreamento de erros. Porém, o GitHub possui duas versões
+                de contas de usuário: a gratuita (todos benefícios citados anteriormente) e a paga (adicionando 
+                funções como a criação de branches), além de depender de ferramentas de terceiros para Sistemas de CI/CD.
             </p>
             <p>
                 O GitHub é mundialmente usado e chega a ter mais de 36 milhões de usuários ativos mundialmente 
