--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <ul class="categoria">
                 <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
-            <a href="#"><li>Instalação</li></a>
+            <a href="pages/instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
-                <a href="#"><li>Instalação no Linux</li></a>
-                <a href="#"><li>Instalação no Windows</li></a>
+                <a href="pages/instalacaoLinux.html"><li>Instalação no Linux</li></a>
+                <a href="pages/instalacaoWindows.html"><li>Instalação no Windows</li></a>
             </ul>
-            <a href="#"><li>Configuração</li></a>
-            <a href="#"><li>Comandos</li></a>
+            <a href="pages/configuracao.html"><li>Configuração</li></a>
+            <a href="pages/comandos.html"><li>Comandos</li></a>
             <ul class="categoria">
-                <a href="#"><li>GitPull</li></a>
-                <a href="#"><li>Branches</li></a>
+                <a href="pages/gitpull.html"><li>GitPull</li></a>
+                <a href="pages/branches.html"><li>Branches</li></a>
             </ul>
-            <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="pages/errosdecommit.html"><li>Erros no Commit</li></a>
+            <a href="pages/exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
         </ul>
     </nav>
     <main>
