--- a/pages/gitlab.html
+++ b/pages/gitlab.html
@@ -30,19 +30,19 @@
             <ul class="categoria">
                 <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
-            <a href="#"><li>Instalação</li></a>
+            <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
-                <a href="#"><li>Instalação no Linux</li></a>
-                <a href="#"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux"><li>Instalação no Linux</li></a>
+                <a href="instalacaoWindows"><li>Instalação no Windows</li></a>
             </ul>
-            <a href="#"><li>Configuração</li></a>
-            <a href="#"><li>Comandos</li></a>
+            <a href="configuracao"><li>Configuração</li></a>
+            <a href="comandos"><li>Comandos</li></a>
             <ul class="categoria">
-                <a href="#"><li>GitPull</li></a>
-                <a href="#"><li>Branches</li></a>
+                <a href="gitpull.html"><li>GitPull</li></a>
+                <a href="branches"><li>Branches</li></a>
             </ul>
-            <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
+            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
         </ul>
     </nav>
     <main>
@@ -56,24 +56,36 @@
                 servidores de terceiros.
             </p>
             <p>
+                O Gitlab proporciona, nativamente, ferramentas de integração e entrega contínua (CI/CD), 
+                além de métricas para acompanhamento de qualidade de código, performance e teste de usabilidade.
+                Contudo, seu diferencial destaca-se em criar branches privadas caso o desenvolvedor
+                prefira não expor o código-fonte do projeto.
+            </p>
+            <p>
                 O software foi escrito originalmente por Dmitriy Zaporozhets, com sua primeira versão em 2011 e 
-                e com a ajuda de Sytse Sijbrandij resolveram fundar uma empresa para dar suporte ao projeto. 
+                e com a ajuda de Sytse Sijbrandij resolveram fundar uma empresa para dar suporte ao projeto, 
+                em 2013. 
+            </p>
+            <p>
+                É utilizado por mais de 100.000 organizações, incluindo IPqM (Marinha do Brasil), 
+                IBM, Serpro (Serviço Federal de Processamento de Dados), NASA, Alibaba, 
+                Invincea, O’Reilly Media, CERN, Projeto GNOME e SpaceX.
             </p>
             <small>Fonte:
                 <ul>
                     <li>
-                        <a href="https://rockcontent.com/blog/o-que-e-github/" target="_blank" rel="noopener noreferrer">
-                            Entenda de uma vez o que é Github e a importância dele num negócio
+                        <a href="https://git-scm.com/book/pt-pt/v2/Git-no-Servidor-GitLab" target="_blank" rel="noopener noreferrer">
+                            Git no Servidor - GitLab
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.hostinger.com.br/tutoriais/o-que-github/" target="_blank" rel="noopener noreferrer">
-                            O Que é GitHub e Para Que é Usado?
+                        <a href="https://www.zup.com.br/blog/git-github-e-gitlab" target="_blank" rel="noopener noreferrer">
+                            Git, Github e Gitlab: o que são e principais diferenças
                         </a>
                     </li>
                     <li>
-                        <a href="https://pt.wikipedia.org/wiki/GitHub" target="_blank" rel="noopener noreferrer">
-                            GitHub
+                        <a href="https://pt.wikipedia.org/wiki/GitLab" target="_blank" rel="noopener noreferrer">
+                            GitLab
                         </a>
                     </li>
                 </ul>
