git commit -m "Conteúdo de Instalação do Git no Windows"

--- a/pages/git.html
+++ b/pages/git.html
@@ -30,19 +30,19 @@
             <ul class="categoria">
                 <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
-            <a href="#"><li>Instalação</li></a>
+            <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
-                <a href="#"><li>Instalação no Linux</li></a>
-                <a href="#"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
+                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
             </ul>
-            <a href="#"><li>Configuração</li></a>
-            <a href="#"><li>Comandos</li></a>
+            <a href="configuracao.html"><li>Configuração</li></a>
+            <a href="comandos.html"><li>Comandos</li></a>
             <ul class="categoria">
-                <a href="#"><li>GitPull</li></a>
-                <a href="#"><li>Branches</li></a>
+                <a href="gitpull.html"><li>GitPull</li></a>
+                <a href="branches.html"><li>Branches</li></a>
             </ul>
-            <a href="#"><li>Erros no Commit</li></a>
-            <a href="#"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
+            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
         </ul>
     </nav>
     <main>
