--- a/pages/gitlab.html
+++ b/pages/gitlab.html
@@ -32,14 +32,14 @@
             </ul>
             <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
-                <a href="instalacaoLinux"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
+                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
             </ul>
-            <a href="configuracao"><li>Configuração</li></a>
-            <a href="comandos"><li>Comandos</li></a>
+            <a href="configuracao.html"><li>Configuração</li></a>
+            <a href="comandos.html"><li>Comandos</li></a>
             <ul class="categoria">
                 <a href="gitpull.html"><li>GitPull</li></a>
-                <a href="branches"><li>Branches</li></a>
+                <a href="branches.html"><li>Branches</li></a>
             </ul>
             <a href="errosdecommit.html"><li>Erros no Commit</li></a>
             <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
