git commit -m "Atualização de Páginas"

--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -62,6 +62,11 @@
                 <h2><li>Depois de esperar o processo de instalação, clique em Finish.</li></h2>
                 <img src="../images/InstalacaoWindows/Passo4_Windows.png" alt="Passo 4 da instalacao do Git no Windows">
             </ol>
+            <h2>Pronto! O Git foi instalado no Windows!</h2>
+            <p>
+                Diferente da instalação do Git no Linux, no Windows é por de um arquivo executável instalador.
+                Agora desfrute seus projetos com o Git!
+            </p>
         </article>
     </main>
     <footer>
