git commit -m "Correção de Bugs"

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <a href="pages/git.html"><li>Git</li></a>
             <a href="pages/github.html"><li>GitHub</li></a>
             <ul class="categoria">
-                <a href="contaGitHub.html"><li>Criar conta no GitHub</li></a>
+                <a href="pages/contaGitHub.html"><li>Criar conta no GitHub</li></a>
             </ul>
             <a href="pages/gitlab.html"><li>GitLab</li></a>
             <ul class="categoria">
-                <a href="contaGitLab.html"><li>Criar conta no GitLab</li></a>
+                <a href="pages/contaGitLab.html"><li>Criar conta no GitLab</li></a>
             </ul>
             <a href="pages/instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
