git commit -m "Atualização de Criar Conta no GitHub"

--- a/pages/contaGitHub.html
+++ b/pages/contaGitHub.html
@@ -52,45 +52,36 @@
                 Nesta página, você aprenderá a criar uma <b>conta no GitHub</b> por etapas:
             </p>
             <ol>
-                <h2><li>Acesse o terminal do Linux.</li></h2>
-                <h2><li>Digite os seguintes comandos:</li></h2>
-                <ul>
-                    <h3><li>Caso a distribuição seja Debian ou Ubuntu:</li></h3>
-                    <div class="codigo">
-                        <code>
-                            $ sudo apt-get update
-                        </code>
-                        <br>
-                        <code>
-                            $ sudo apt-get install git
-                        </code>
-                    </div>
-                    <h3><li>Caso a distribuição seja da família HadHat (Fedora, CentOS, ...):</li></h3>
-                    <div class="codigo">
-                        <code>
-                            $ yum install git-core
-                        </code>
-                    </div>
-                </ul>
-                <h2><li>Caso precise ver a versão do Git:</li></h2>
-                <div class="codigo">
-                    <code>
-                        $ git --version
-                    </code>
-                </div>
+                <h2><li>Acesse o site do <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>.</li></h2>
+                <h2><li>Digite suas informações para fazer o cadastro.</li></h2>
                 <p>
-                    O <b>sudo</b> permite que o usuário faça alterações como outro usuário, 
-                    em geral como um superusuário (root).
+                    Em <b>"username"</b> insira um nome para sua conta (será verificado a disponibilidade),
+                    em <b>"email"</b> digite seu email de acesso,
+                    em <b>"senha"</b> crie uma senha que contenha no máximo de 15 caracteres, contendo pelo
+                    menos um número, um caractere especial, letra maiúscula e minúscula.
                 </p>
-                <p> 
-                    O <b>apt-get</b> é um gerenciador de pacotes, ele permite que você faça downloads de 
-                    atualizações e de novos arquivos.
+                <img src="../images/ContaGitHub/Passo1_ContaGitHub.png" alt="Passo 1 do cadastro no GitHub">
+                <h2><li>Verifique sua conta.</li></h2>
+                <p>
+                    Será feito um teste de verificação de conta, com opção de receber emails ocasionais 
+                    de atualizações de produtos, anúncios e ofertas do GitHub. Após o teste e o preenchimento, 
+                    clique em <b>"join a free plan"</b>.
                 </p>
+                <img src="../images/ContaGitHub/Passo2_ContaGitHub.png" alt="Passo 2 do cadastro no GitHub">
+                <h2><li>Conclua a pesquisa.</li></h2>
+                <p>
+                    Será redirecioando para uma pesquisa do GitHub, perguntando sobre seus interesses no site, 
+                    experiência em programação e seu objetivo em usar a plataforma.
+                </p>
+                <h2><li>Verifique a caixa de entrada de seu email.</li></h2>
+                <p>Será enviado um email de confirmação de cadastro no GitHub</p>
+                <h2><li>Faça o login na conta do GitHub</li></h2>
+                <p>Digite o seu <b>username</b> ou <b>email</b>, a senha e clique em <b>"sign in"</b>.</p>
+                <img src="../images/ContaGitHub/Passo3_ContaGitHub.png" alt="Passo 3 do cadastro no GitHub">
             </ol>
-            <h2>Pronto! O Git foi instalado no Linux!</h2>
+            <h2>Pronto! Agora você possui uma conta no GitHub!</h2>
             <p>
-                Diferente da instalação do Git no Windows, no Linux é por meio de comandos no terminal.
-                Agora desfrute seus projetos com o Git!
+                Agora desfrute seus projetos com o GitHub!
             </p>
         </article>
     </main>
