--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -56,7 +56,7 @@
                 <img src="../images/InstalacaoWindows/Passo1_Windows.png" alt="Passo 1 da instalacao do Git no Windows">
                 <h2><li>Clique em Download e automaticamente começará a baixar o arquivo.</li></h2>
                 <img src="../images/InstalacaoWindows/Passo2_Windows.png" alt="Passo 2 da instalacao do Git no Windows">
-                <h2><li>Abra o arquivo foi baixado.</li></h2>
+                <h2><li>Abra o arquivo que foi baixado.</li></h2>
                 <h2><li>Siga as orientações de instalação, clicando em Next e Install.</li></h2>
                 <img src="../images/InstalacaoWindows/Passo3_Windows.png" alt="Passo 3 da instalacao do Git no Windows">
                 <h2><li>Depois de esperar o processo de instalação, clique em Finish.</li></h2>
@@ -64,7 +64,7 @@
             </ol>
             <h2>Pronto! O Git foi instalado no Windows!</h2>
             <p>
-                Diferente da instalação do Git no Linux, no Windows é por de um arquivo executável instalador.
+                Diferente da instalação do Git no Linux, no Windows é por meio de um arquivo executável instalador.
                 Agora desfrute seus projetos com o Git!
             </p>
         </article>
