git commit -m "Correção das TAGs Titles"

--- a/pages/instalacao.html
+++ b/pages/instalacao.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Git – Instalação no Windows</title>
+    <title>Git – Instalação</title>
 </head>
 <body>
     <div class="focus"></div>
